# zx-motifs

./: .gitignore  CLAUDE.md  README.md  composer.py  config.yaml  corpus.py  paper_draft.md  pipeline.py  pyproject.toml  report.md  reporter.py  run_pipeline.py
discovered/: _summary.txt  auto_023e28ea210a4863c99eed8536997854.json  auto_0ca20755a855b01e4fd4ae848c2fbf66.json  auto_14e9e466cd2944b8a1d3c19198c94c4e.json  auto_404a1083ce742d80c7e014eaad7db875.json  auto_7d495f0205427371fcb334bb4d0d0513.json  auto_91d4674adae9a55e1397977512c89818.json  auto_9e22a2a296a17ee1f8bb857afaececd4.json  auto_b3584662d9850da99a34b5be2f864484.json  auto_d4c2b89a05faed5e38a8dbf3a69bcef4.json  auto_e6f788f36bca2b43309cccea1713d508.json  auto_fd176f494abf4b8d64c63295f092b91b.json  nbr_2e753dbb2866f75e065a9a345bff7726.json  nbr_3660ff7c311ad431ab4825f3f9df877b.json  nbr_3ab24c8298c04db5be237d20fc96755f.json  nbr_45db3509caa3019a27b609ed1e240ea9.json  nbr_5947656fcc96afddbcc107dcfbc63805.json  nbr_7681a438fec399149e59a7bde69aadb8.json  nbr_8461cd4f0fcbd81442df2acad843103f.json  nbr_8b1a537a383de2d8f1e8e08d5141ed5d.json  nbr_e4bc3b8d23159b92e66d5194a1585386.json
notebooks/: 01_conversion_explorer.ipynb  02_motif_detection.ipynb  03_box_library.ipynb  04_novel_compositions.ipynb  05_motif_decomposition_visual.ipynb
paper/: draft.tex  references.bib
scripts/: BENCHMARK_ANALYSIS.md  benchmark_ansatz.py  benchmark_novel_ansatze.py  benchmark_results.csv  compare_algorithms.py  discover_algorithm.py  discover_new_motifs.py  discover_phylogeny.py  refine_ansatz.py  run_end_to_end.py  (+2 more)
(+106 files in other folders)
