[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ZX-Webs"
version = "0.1.0"
description = "Quantum algorithm discovery via ZX-calculus sub-diagram mining"
requires-python = ">=3.10"
dependencies = [
    "qiskit>=1.0",
    "pyzx>=0.8.0",
    "networkx>=3.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "matplotlib",
]
advanced = [
    "qiskit-aer>=0.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
